--- a/about/privacy.html
+++ b/about/privacy.html
@@ -9,7 +9,7 @@
       </h2>
     </div>
       <div class="inner">
-   		 <!--Privacy-->
+   		 <!-- Privacy -->
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <p>In general, you may visit this Web site without providing any personal information to us. If you choose to provide information voluntarily, we will use that information in accordance with our data privacy principles and in accordance with any specific notice given as part of the collection of that data.</p>
           <h5>Web site practices</h5>
@@ -23,4 +23,4 @@
       </div>
     </div>
   </div>
-</div><!-- /content--> 
+</div><!-- content --> 
