--- a/about/terms.html
+++ b/about/terms.html
@@ -24,6 +24,7 @@
             <p>Copyright &copy; 2015 WebSurvey. All Rights Reserved. The Site and all information (in text, graphical, video and audio forms), images, icons, software, designs, applications, calculators, models, data, and other elements available on or through the Site are the property of WebSurvey and others, and are protected by copyright, trademark, and other laws. Your use of the Site does not transfer to you any ownership or other rights in the Site or its content. The Site may only be used in the manner described expressly in these Terms and Conditions. In particular, except as expressly stated otherwise in these Terms and Conditions, the Web Site may not be copied, imitated, reproduced, republished, uploaded, posted, transmitted, modified, indexed, catalogued, mirrored or distributed in any way, in whole or in part, without the express prior written consent of WebSurvey.</p>
           <h5>Personal Information/Privacy</h5>
             <p>WebSurvey collects, uses and discloses information regarding your use of the Site and your personal information in accordance with the Privacy Policy, which is available on the Site. WebSurvey may change the Privacy Policy from time to time in its discretion without prior notice or liability to you or any other person. By using the Site, you consent to WebSurvey's collection, use and disclosure of your personal information in accordance with the Privacy Policy as it then reads without any further notice or any liability to you or any other person.</p>
+		</div>
       </div>
     </div>
   </div>
